tests/baselines/reference/implicitAnyInAmbientDeclaration.errors.txt
implicitAnyInAmbientDeclaration.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
implicitAnyInAmbientDeclaration.ts(3,16): error TS7008: Member 'publicMember' implicitly has an 'any' type.
implicitAnyInAmbientDeclaration.ts(6,16): error TS7010: 'publicFunction', which lacks return-type annotation, implicitly has an 'any' return type.
implicitAnyInAmbientDeclaration.ts(6,31): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== implicitAnyInAmbientDeclaration.ts (4 errors) ====
    module Test {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        declare class C {
            public publicMember;  // this should be an error
                   ~~~~~~~~~~~~
!!! error TS7008: Member 'publicMember' implicitly has an 'any' type.
            private privateMember;  // this should not be an error
    
            public publicFunction(x);  // this should be an error
                   ~~~~~~~~~~~~~~
!!! error TS7010: 'publicFunction', which lacks return-type annotation, implicitly has an 'any' return type.
                                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            private privateFunction(privateParam);  // this should not be an error
            private constructor(privateParam);
        }
    }